frontend/test/should_fail/inh_attrib_002.grg
using inh_attrib_model_002;

rule r {
	pattern {
	}
	replace {
	}
}

